@@ -115,6 +115,10 @@ Equivalent to
 .B -O timelimit=TIME
 .SS "NAMED OPTIONS"
 .TP
+.B bcc \fR(string)
+If given, all responses are copied to this address in addition to the
+original sender.
+.TP
 .B copymsg \fR(boolean)
 Copy the original message into the response.
 .TP
